Updated auth flow, added installer endpoints
