# src/controllers/installer-status-controller.ts
@@ -1,0 +1,20 @@
+import { Controller, Security, Route, Tags, Get } from 'tsoa';
+
+import { InstallerStatus } from '../types';
+
+import cpService from '../services/cp';
+
+@Route('installer-status')
+@Security('jwtAuth')
+@Tags('installer')
+export class InstallerStatusController extends Controller {
+  /** jwt scopes: `installer` */
+  @Get()
+  public getInstallerStatus(): InstallerStatus {
+    return {
+      onOffPeak: cpService.getOnOffPeak(),
+      loadSheddingModule: cpService.getLoadSheddingStatus(),
+      installationUsage: cpService.getInstallationUsage()
+    };
+  }
+}
